<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/repeatingAlarm"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnRepeatingTime"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/tvRepeatingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmTime" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeatingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/alarmMessage"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_setRepeatingAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/setRepeatingAlarm" />

        <Button
            android:id="@+id/btn_cancelRepeatingAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancelAlarm" />
    </LinearLayout>
</LinearLayout>